
Deprecations:

- The precision keyword arguments of methods in rasterio.transform,
  rasterio.windows, and rasterio.merge are unused and will be removed in
  version 2.0. The --precision option of rio-merge is similarly deprecated
  (#2432).
- The rasterio.path module will be removed in version 1.4 and a deprecation
  warning is issued when the module is imported (#2423).

New features:

- The rio-warp CLI command now takes --wo (--warper-option) and --to
  (--transformer-option) options, allowing the use of PROJ coordinate
  transformation pipelines like "--to coordinate_operation=proj=pipeline"
  (#2438).

Changes:

- The Python file VSI plugin is now created and installed at the same time
  other GDAL drivers are registered (#2435).
- Various optimizations for sample_gen() (#2338).
- Update Cython property declarations to modern style (#2316).
- The rasterio.path module has been moved to rasterio._path and all its member
  made private (#2423). A new version of rasterio.path temporarily provides
  aliases to maintain compatibility.

Bug fixes:

- Rasterio's warper is fixed such that it can support reprojection to a
  specific dataset band (#2369).
- Erroneously overlapping slices (reported in #2378) are now prevented by
  ensuring that slice indexes with negative values are set to zero (#2434).
- Prevent erroneous sign flip in a south-up dataset's res property (#2370).
- Allow DatasetReader and DatasetWriter to take string filenames and URLs
  (#2426).
- Support for compound EPSG CRS has been added (#2425).
- Z coordinates are no longer ignored when transforming using RPCs (#2422).
- Integer overflow errors in CRS.from_epsg are caught and CRSError is raised
  (#2395).

1.3a3 (2022-02-04)
------------------

New features:

- The CRS class has been added to rasterio.__all__.
- Python file objects and file-like objects from, for example, fsspec are
  adapted for opening to get a dataset without copying file data to a
  MemoryFile (#2141).

Bug fixes:
